hphp/hack/test/typecheck/unresolved_compare.php.exp
File "unresolved_compare.php", line 13, characters 10-16:
This comparison has invalid types.  Only comparisons in which both arguments are strings, nums, DateTime, or DateTimeImmutable are allowed (Typing[4240])
File "unresolved_compare.php", line 11, characters 15-15:
This is an object of exactly the class A
File "unresolved_compare.php", line 12, characters 15-15:
This is an object of exactly the class B
